# kanso

./: .dockerignore  .env.dev  .env.example  .env.prod  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yaml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  sonar-project.properties
.claude/: README.md  ROADMAP.md  architecture-principles.md  development-guidelines.md  documentation-style.md  plugin_solution.md  project-context.md
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  docs.yml  publish-docker.yml
app/: charts.py  gsheet.py  ui.py  utils.py
app/core/: config.py  constants.py  currency_formats.py  error_messages.py  exceptions.py  monitoring.py  state_manager.py  validators.py
app/logic/: data_quality.py  dataframe_processor.py  finance_calculator.py  monetary_parsing.py  table_formatters.py
app/services/: data_loader.py  data_loader_core.py  finance_service.py  google_sheets.py  pages.py  utils.py
app/ui/: charts.py  common.py  dashboard_page.py  data_loading.py  dock.py  expenses.py  header.py  home.py  logout.py  net_worth.py  onboarding.py  quick_add.py  rendering_utils.py  settings.py  styles.py  table_utils.py  user.py
app/ui/components/: skeleton.py
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  google-sheets-setup.md  index.md  installation.md  troubleshooting.md
docs/features/: dashboard.md  expenses.md  net-worth.md  overview.md
static/themes/: dark_default_echarts_theme.json  default_echarts_theme.json  echarts_theme.json  light_default_echarts_theme.json
tests/: __init__.py  conftest.py  test_currency_formats.py  test_data_loader.py  test_data_loader_core.py  test_finance_calculator.py  test_state_manager.py  test_validators.py
tests/e2e/: __init__.py  test_edge_cases.py  test_home_smoke.py  test_navigation.py  test_onboarding.py  test_quick_add.py  test_user_settings.py
tests/unit/: test_cash_flow_multiple_incomes.py  test_charts.py  test_config.py  test_currency_formats.py  test_data_loader_core.py  test_data_loader_helpers.py  test_data_quality.py  test_dataframe_processor.py  test_dataframes_structure.py  test_error_messages.py  test_exceptions.py  test_expenses_datetime_dates.py  test_expenses_integration.py  test_finance_calculator.py  test_finance_service.py  test_google_sheets_retry.py  test_incomes_single_vs_multi_header.py  test_monetary_parsing.py  test_monitoring.py  test_multiindex_series_fix.py  test_net_worth_calculation_fix.py  test_quick_add.py  test_saving_ratio_debug.py  test_state_manager.py  test_table_formatters.py  test_table_utils.py  test_ui_common.py  test_utils.py  test_validators.py  test_validators_extended.py
