[project]
name = "kanso"
version = "0.1.0"
description = "Your minimal money tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread==6.2.1",
    "nicegui==3.7.1",
    "pandas==3.0.0",
    "pydantic==2.12.5",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "python-dotenv==1.2.1",
    "tenacity>=8.2.0",
    "user-agents==2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# Playwright configuration
markers = [
    "e2e: End-to-end tests using Playwright (deselect with '-m \"not e2e\"')"
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (replaces isort tool)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle (replaces pydocstyle tool)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "D100",  # Missing docstring in public module
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests don't need docstrings
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "playwright>=1.55.0",
    "pre-commit>=4.3.0",
    "pytest-playwright>=0.7.1",
    "ruff>=0.8.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
]
